media/blink/webmediaplayer_params.cc
@@ -31,7 +31,8 @@ WebMediaPlayerParams::WebMediaPlayerParams(
     mojom::MediaMetricsProviderPtr metrics_provider,
     base::Callback<std::unique_ptr<blink::WebSurfaceLayerBridge>(
         blink::WebSurfaceLayerBridgeObserver*)> create_bridge_callback,
-    scoped_refptr<viz::ContextProvider> context_provider)
+    scoped_refptr<viz::ContextProvider> context_provider,
+    bool use_surface_layer_for_video)
     : defer_load_cb_(defer_load_cb),
       audio_renderer_sink_(audio_renderer_sink),
       media_log_(std::move(media_log)),
@@ -52,7 +53,8 @@ WebMediaPlayerParams::WebMediaPlayerParams(
       embedded_media_experience_enabled_(embedded_media_experience_enabled),
       metrics_provider_(std::move(metrics_provider)),
       create_bridge_callback_(create_bridge_callback),
-      context_provider_(std::move(context_provider)) {}
+      context_provider_(std::move(context_provider)),
+      use_surface_layer_for_video_(use_surface_layer_for_video) {}
 
 WebMediaPlayerParams::~WebMediaPlayerParams() = default;
 
